Updated project layout

--- a/index.html
+++ b/index.html
@@ -1,29 +1,1 @@
-<!DOCTYPE html>
-<html lang="en" class="dark" style="background: var(--main-background)">
-    <head>
-        <title>SupplierCalc</title>
-        <script src="https://unpkg.com/vue@next"></script>
-        <script src="https://unpkg.com/clipboard@2/dist/clipboard.min.js"></script>
-
-        <link href='https://unpkg.com/css.gg/icons/all.css' rel='stylesheet'>
-        <link rel="stylesheet" href="paper.min.css">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        
-        <div id="app" class="row" style="margin-bottom: 0px;">
-            <div class="lg-2 sm-4 col sb2" style="height: 100vh; overflow-y: auto;">
-                <button-bar></button-bar>
-                <recipe-list></recipe-list>
-            </div>
-            <div class="col-fill col"> 
-                <chain-resolver></chain-resolver>
-            </div>
-
-            <notification-bar></notification-bar>>
-        </div>
-        
-        <script src="repository.js"></script>
-        <script src="index.js"></script>
-    </body>
-</html>
+<!DOCTYPE html><html lang="en" class="dark" style="background: var(--main-background)"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>supply-chain-calculator</title><link href="/css/app.ec30d47d.css" rel="preload" as="style"><link href="/js/app.1d1ea16e.js" rel="preload" as="script"><link href="/js/chunk-vendors.edacf5f6.js" rel="preload" as="script"><link href="/css/app.ec30d47d.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but supply-chain-calculator doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.edacf5f6.js"></script><script src="/js/app.1d1ea16e.js"></script></body></html>
